Remove references to Erlang, closes #248

--- a/content/about/state.adoc
+++ b/content/about/state.adoc
@@ -59,9 +59,9 @@ In all cases the program will see stable views of the values in the world, as th
 [[actors]]
 == Message Passing and Actors
 
-There are other ways to model identity and state, one of the more popular of which is the message-passing https://en.wikipedia.org/wiki/Actor_model[actor model], best exemplified by the quite impressive https://en.wikipedia.org/wiki/Erlang_%28programming_language%29[Erlang]. In an actor model, state is encapsulated in an actor (identity) and can only be affected/seen via the passing of messages (values). In an asynchronous system like Erlang's, reading some aspect of an actor's state requires sending a request message, waiting for a response, and the actor sending a response. It is important to understand that _the actor model was designed to address the problems of *distributed* programs_. And the problems of distributed programs are much harder - there are multiple worlds (address spaces), direct observation is not possible, interaction occurs over possibly unreliable channels, etc. The actor model supports transparent distribution. If you write all of your code this way, you are not bound to the actual location of the other actors, allowing a system to be spread over multiple processes/machines without changing the code.
+There are other ways to model identity and state, one of the more popular of which is the message-passing https://en.wikipedia.org/wiki/Actor_model[actor model]. In an actor model, state is encapsulated in an actor (identity) and can only be affected/seen via the passing of messages (values). In an asynchronous system, reading some aspect of an actor's state requires sending a request message, waiting for a response, and the actor sending a response. It is important to understand that _the actor model was designed to address the problems of *distributed* programs_. And the problems of distributed programs are much harder - there are multiple worlds (address spaces), direct observation is not possible, interaction occurs over possibly unreliable channels, etc. The actor model supports transparent distribution. If you write all of your code this way, you are not bound to the actual location of the other actors, allowing a system to be spread over multiple processes/machines without changing the code.
 
-I chose not to use the Erlang-style actor model for same-process state management in Clojure for several reasons:
+I chose not to use the actor model for same-process state management in Clojure for several reasons:
 
 
 * It is a much more complex programming model, requiring 2-message conversations for the simplest data reads, and forcing the use of blocking message receives, which introduce the potential for deadlock. Programming for the failure modes of distribution means utilizing timeouts etc. It causes a bifurcation of the program protocols, some of which are represented by functions and others by the values of messages.
