--- a/content/guides/repl/data_visualization_at_the_repl.adoc
+++ b/content/guides/repl/data_visualization_at_the_repl.adoc
@@ -1,7 +1,7 @@
 = Programming at the REPL: Data Visualization
 Valentin Waeselynck
 2018-02-10
-:type: programming_at_the_repl
+:type: repl
 :toc: macro
 :icons: font
 :navlinktext: Data Visualization at the REPL
