--- a/content/guides/repl/introduction.adoc
+++ b/content/guides/repl/introduction.adoc
@@ -1,7 +1,7 @@
 = Programming at the REPL: Introduction
 Valentin Waeselynck
 2018-02-10
-:type: programming_at_the_repl
+:type: repl
 :toc: macro
 :icons: font
 :navlinktext: Introduction
