--- a/content/guides/repl/launching_a_basic_repl.adoc
+++ b/content/guides/repl/launching_a_basic_repl.adoc
@@ -1,7 +1,7 @@
 = Programming at the REPL: Launching a Basic REPL
 Valentin Waeselynck
 2018-02-10
-:type: programming_at_the_repl
+:type: repl
 :toc: macro
 :icons: font
 :navlinktext: Launching a Basic REPL
