--- a/content/guides/repl/navigating_namespaces.adoc
+++ b/content/guides/repl/navigating_namespaces.adoc
@@ -1,7 +1,7 @@
 = Programming at the REPL: Navigating Namespaces
 Valentin Waeselynck
 2018-02-10
-:type: programming_at_the_repl
+:type: repl
 :toc: macro
 :icons: font
 :navlinktext: Navigating Namespaces
