--- a/content/guides/getting_started.adoc
+++ b/content/guides/getting_started.adoc
@@ -55,7 +55,7 @@ Not yet available - see Leiningen or Boot instead.
 
 *Local build*
 
-Download and build the Clojure source:
+Download and build Clojure from source:
 
 [source,shell]
 ----
