--- a/content/guides/repl/launching_a_basic_repl.adoc
+++ b/content/guides/repl/launching_a_basic_repl.adoc
@@ -18,7 +18,7 @@ Use any of the following methods to start a basic Clojure REPL in a terminal win
 
 == Using the CLI tools
 
-The easiest way to start a Clojure REPL is with using the `clj` command of the Clojure <</guides/deps_and_cli#, CLI tools>>:
+The easiest way to start a Clojure REPL is with using the `clj` command of the Clojure <<xref/../../deps_and_cli#, CLI tools>>:
 
 [source,shell]
 ----
@@ -33,7 +33,7 @@ Clojure 1.9.0
 user=>
 ----
 
-See <</guides/getting_started#,Getting Started>> to learn how to install the Clojure CLI.
+See <<xref/../../getting_started#,Getting Started>> to learn how to install the Clojure CLI.
 
 You can exit the REPL by typing `Ctrl+D` (pressing the `Ctrl` and `D` keys at the same time).
 
@@ -101,7 +101,7 @@ boot.user=>
 
 == Using Java and the Clojure JAR
 
-If you have <</guides/getting_started#_other_ways_to_run_clojure,downloaded and built Clojure>>,
+If you have <<xref/../../getting_started#_other_ways_to_run_clojure,downloaded and built Clojure>>,
  you can use Java to launch a Clojure REPL:
 
 [source,shell]
