complete intra-page nav

--- a/content/guides/repl/annex_community_resources.adoc
+++ b/content/guides/repl/annex_community_resources.adoc
@@ -5,6 +5,8 @@ Valentin Waeselynck
 :toc: macro
 :icons: font
 :navlinktext: Enhancing your REPL environment
+:prevpagehref: enhancing_your_repl_workflow
+:prevpagetitle: Enhancing your REPL workflow
 :nextpagehref: annex_troubleshooting
 :nextpagetitle: Annex: Troubleshooting
 
