--- a/content/guides/repl/annex_troubleshooting.adoc
+++ b/content/guides/repl/annex_troubleshooting.adoc
@@ -5,6 +5,8 @@ Valentin Waeselynck
 :toc: macro
 :icons: font
 :navlinktext: Troubleshooting
+:prevpagehref: annex_community_resources
+:prevpagetitle: Annex: Community resources about the REPL
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
