Update tool name

--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -91,7 +91,7 @@ Community volunteers maintain <<xref/../../guides/getting_started#,Getting Start
 * http://www.lighttable.com/[Light Table]
 * http://www.sublimetext.com/[Sublime Text] with https://github.com/wuub/SublimeREPL[SublimeREPL]
 * https://atom.io[Atom] with https://atom.io/packages/nrepl[nrepl]
-* https://code.visualstudio.com[VS Code] with https://github.com/avli/clojureVSCode[clojureVSCode]
+* https://code.visualstudio.com[Visual Studio Code] with https://github.com/avli/clojureVSCode[clojureVSCode]
 
 == Conferences
 
