- remove/rename user groups in Norway and Netherlands

--- a/content/community/user_groups.adoc
+++ b/content/community/user_groups.adoc
@@ -112,10 +112,9 @@ Riviera Scala, (Twitter: https://twitter.com/riviera_func[@riviera_func])
 ** Italia
 *** http://groups.google.com/group/clojure-italy[Italian Clojure User Group]
 ** Netherlands
-*** http://amsclj.nl/[Amsterdam Clojurians] (Twitter: https://twitter.com/amsclj[@amsclj])
-*** http://www.meetup.com/ehrd-clj[Rotterdam/Den Haag]
+*** http://amsclj.nl/[The Dutch Clojure Meetup] (Twitter: https://twitter.com/amsclj[@amsclj])
 ** Norway
-*** http://www.meetup.com/Oslo-Socially-Functional/[Oslo Socially Functional Programmers]
+*** https://www.meetup.com/Oslo-Clojure-Meetup/[Oslo Clojure Meetup]
 ** Russia
 *** https://plus.google.com/u/0/communities/114227952963737516047[Clojure Russia]
 ** Slovakia
