--- a/content/community/user_groups.adoc
+++ b/content/community/user_groups.adoc
@@ -7,16 +7,13 @@
 ifdef::env-github,env-browser[:outfilessuffix: .adoc]
 
 Do you wish there was a Clojure User Group in your area? Check
-out our page of <<xref/../start_group,tips for starting your own>>
+out our page of <<start_group,tips for starting your own>>
 
 If you'd like to have your group listed here, please submit a PR against the
-https://gitub.com/clojure/clojure-site[clojure-site] github repo.
+https://github.com/clojure/clojure-site[clojure-site] github repo.
 
-Join the https://groups.google.com/forum/?fromgroups#!forum/clojure-power[clojure-power]
-mailing list for group organizers!
-
-[ <<xref/../user_groups#americas,Americas>>] [<<xref/../user_groups#europe,Europe>>]
-[ <<xref/../user_groups#asia,Asia>> ] [<<xref/../user_groups#australiannz,Australia / New Zealand>>]
+[ <<user_groups#americas,Americas>> ] [ <<user_groups#europe,Europe>> ]
+[ <<user_groups#asia,Asia>> ] [ <<user_groups#australiannz,Australia / New Zealand>> ]
 
 [[americas]]
 == Americas
@@ -38,14 +35,14 @@ Group]
 Massachusetts & surroundings) Welcoming all FP-ers (Erlang/Scheme/Scala/Haskell/etc etc etc), but
 Clojure fans generally form a plurality.
 *** http://www.meetup.com/Clojure-NYC/[NYC Clojure Users Group] (Twitter: https://twitter.com/ClojureNYC[@ClojureNYC])
-*** http://www.meetup.com/ClojureScript-NYC[ClojureScript NYC] (Twitter: https://twitter.com/ClojureNYC[ClojureNYC])
+*** ClojureScript NYC (Twitter: https://twitter.com/ClojureNYC[@ClojureNYC])
 *** http://www.meetup.com/Clojadelphia/[Clojadelphia - The Philadelphia User
 Group]
 *** Pittsburgh Clojure Users Group is part of http://www.codeandsupply.co/[Pittsburgh Code & Supply]
 ** Midwest
 *** http://www.meetup.com/Chicago-Clojure/[Chicago]
 *** https://cincyfp.wordpress.com/[Cincy Functional Programmers Group]
-*** http://www.meetup.com/detroit-clojur[eDetroit Clojure Group]
+*** Detroit Clojure Group
 *** https://www.meetup.com/clojure-mke/[Clojure MKE - Milwaukee, WI]
 *** http://www.meetup.com/Madison-Clojure-Meetup/[Madison Clojure Meetup] - Madison, WI
 *** http://clojure.mn/[Minnesota Clojure Users Group]
@@ -55,15 +52,14 @@ Group]
 *** http://www.meetup.com/Baltimore-Clojure/[Baltimore Clojure Meetup]
 *** http://www.meetup.com/Cap-Clug/[National Capital Area Clojure Users
 Group] - Reston, VA
-*** http://www.meetup.com/ClojureDC/[ClojureDC] - Washington, DC
+*** ClojureDC - Washington, DC
 *** http://meetup.com/TriClojure/[TriClojure Meetup]
 *** http://www.meetup.com/Atl-Clj/[Atlanta Clojure User Group]
 *** http://groups.google.com/group/clj-houston[Clojure Houston User Group]
 *** Dallas/Fort Worth Clojure Interest Group (https://groups.google.com/forum/#topic/clojure/Cym7oiViFoQ[
 See mailing list thread for more info])
 *** http://www.meetup.com/Austin-Clojure-Meetup/[Austin Clojure Meetup]
-*** http://www.meetup.com/Greenville-Clojure-Users-Group/[Greenville Clojure Users
-Group] (and https://groups.google.com/forum/#!forum/greenville-clojure[mailing list])
+*** Greenville Clojure Users Group (and https://groups.google.com/forum/#!forum/greenville-clojure[mailing list])
 *** https://www.meetup.com/Clojure-Co-Lab/[Clojure Co-Lab] - Columbia, South
 Carolina
 ** West
@@ -89,7 +85,7 @@ dojo); San Mateo (monthly meetup)
 *** http://www.meetup.com/Lambda-Meetup-Group/[Prague Lambda Meetup]
 ** Denmark
 *** https://www.meetup.com/aarhusclj/[Aarhus Clojure Meetup] (Twitter: https://twitter.com/aarhusclj[@aarhusclj])
-*** http://www.meetup.com/Copenhagen-Clojure-Meetup/[Copenhagen Clojure Meetup]- meetings every 6 weeks
+*** http://www.meetup.com/Copenhagen-Clojure-Meetup/[Copenhagen Clojure Meetup] - meetings every 6 weeks
 ** Finland
 *** https://groups.google.com/forum/#%21forum/clojure-finland[Clojure Finland]
 ** France
@@ -125,7 +121,7 @@ Riviera Scala, (Twitter: https://twitter.com/riviera_func[@riviera_func])
 ** Switzerland
 *** http://www.meetup.com/zh-clj-Zurich-Clojure-User-Group/[Zürich Clojure User Group]
 ** UK
-*** http://londonclojurians.org/[London Clojurians]
+*** London Clojurians
 *** Manchester Clojure Dojo
 *** http://www.meetup.com/Cambridge-NonDysFunctional-Programmers/[Cambridge NonDysFunctional Programmers] and https://groups.google.com/forum/#!forum/camclj[Cambridge Clojure User Group] mailing list
 *** http://www.meetup.com/Bristol-Clojurians/[Bristol Clojurians]
