Added a 'Guidelines for REPL-Aided development' chapter the the REPL guide

--- a/content/guides/repl/enhancing_your_repl_workflow.adoc
+++ b/content/guides/repl/enhancing_your_repl_workflow.adoc
@@ -7,8 +7,8 @@ Valentin Waeselynck
 :navlinktext: Enhancing your REPL workflow
 :prevpagehref: navigating_namespaces
 :prevpagetitle: Navigating Namespaces
-:nextpagehref: annex_community_resources
-:nextpagetitle: Annex: Community resources about the REPL
+:nextpagehref: guidelines_for_repl_aided_development
+:nextpagetitle: Guidelines for REPL-Aided Development
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
