update page nav

--- a/content/guides/repl/annex_community_resources.adoc
+++ b/content/guides/repl/annex_community_resources.adoc
@@ -5,8 +5,8 @@ Valentin Waeselynck
 :toc: macro
 :icons: font
 :navlinktext: Enhancing your REPL environment
-:prevpagehref: enhancing_your_repl_workflow
-:prevpagetitle: Enhancing your REPL workflow
+:prevpagehref: guidelines_for_repl_aided_development
+:prevpagetitle: Guidelines for REPL-Aided Development
 :nextpagehref: annex_troubleshooting
 :nextpagetitle: Annex: Troubleshooting
 
