--- a/content/community/success_stories.adoc
+++ b/content/community/success_stories.adoc
@@ -395,6 +395,23 @@ Here are just some of the public success stories from companies using Clojure.  
                     </cite>
                   </blockquote>
                 </li>
+                <li>
+                  <p><img style="border: 3px solid #ebebeb;" src="/images/logos/cloudrepo.png" /></p>
+                  <p>
+                    <a target="cloudrepo" href="https://www.cloudrepo.io/">CloudRepo</a> is a cloud based repository manager for storing and sharing your software libraries (Leiningen, Boot, Maven, etc).
+                  </p>
+                  <hr>
+                  <p>
+                    <span class='read-more'>CloudRepo's founder <a target="testimonial" href="https://medium.com/@chris.shellenbarger/key-lesson-building-cloudrepo-with-clojure-99bc1c1c405e">discusses</a> the choice to use a Clojure stack.</span>
+                  </p>
+                  <blockquote style='margin-left: 0; padding: 0'>
+                    <p>Simplified development, building a complete product with a very small team, and zero customer impacting outages. That's just in our first year of working with Clojure!</p>
+                    <cite>
+                      <strong>Chris Shellenbarger</strong>
+                      Founder, CloudRepo
+                    </cite>
+                  </blockquote>
+                </li>
               </ul>
             </div>
 
